Included a Nav bar for easy navigation still need to make links to the sections

--- a/index.html
+++ b/index.html
@@ -10,7 +10,25 @@
 <body>
     
       </header>
-    <header class="header"></header>
+    <header class="header"><div class="header__content">
+        <div class="header_main">
+          <ul class="header_links">
+            <li class="header_link-container">
+              <a href="" class="header_link"> Home </a>
+            </li>
+            <li class="header_link-container">
+              <a href="#about" class="header_link">About </a>
+            </li>
+            <li class="header__link-wrapper">
+              <a href="#projects" class="header_link"> Projects </a>
+            </li>
+            <li class="header__link-wrapper">
+              <a href="#contact" class="header_link"> Contact </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </header>
     <section class="home"></section>
     <section id="about"></section>
     <div class="main_container">
