Made changes to style and color and text howver facing issues with the portfolio section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
+
+
+
 <!-- Nav Bar section -->
   <header>
     <nav>
@@ -15,7 +18,7 @@
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#Projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#Contact">Contact</a></li>
         </ul>
       </nav> 
   </header>
@@ -79,11 +82,12 @@
     <section class="Child_Projects_container">
       <article>
         <header class ="portfolio_title_header">
-          <img src="?" />
-          <h1>Portfolio Item Title</h1>
+          <img src="jaytrust.png" />
+          <h1>JaysTrust DAO</h1>
         </header>
         <div class="content">
-          <p>explain dao</p>
+          <p>I made a decentralized autonomous organization web app using third web creating smart contracts using javascript. also termnianl skills to connect, create and deploy the contracts and react.js.
+            the web app allows people to connect their wallet → mint a membership NFT → receive a token airdrop → and vote on proposals. The user will need a membership NFT to join the DAO. If they don't have a membership NFT, they will be prompt to actually mint a membership NFT and join the DAO.</p>
           <h2>Skills used:</h2>
           <ul class="tags">
             <li class="html">HTML</li>
