Jordan did a code review and noticed the issue with formatting and resolved

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <img src="jaytrust.png" />
           <h1>JaysTrust DAO</h1>
         </header>
-        <div class="content">
+        <div class="">
           <p>I made a decentralized autonomous organization web app using third web creating smart contracts using javascript. also termnianl skills to connect, create and deploy the contracts and react.js.
             the web app allows people to connect their wallet → mint a membership NFT → receive a token airdrop → and vote on proposals. The user will need a membership NFT to join the DAO. If they don't have a membership NFT, they will be prompt to actually mint a membership NFT and join the DAO.</p>
           <h2>Skills used:</h2>
