--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
 <body>
 	<!----hero Section start---->
 
-	<div class="hero">
+	<div class="hero"  id="hero1">
 		<nav>
-			<h2 class="logo">Portfo<span>lio</span></h2>
+			<h2 class="logo">Portfolio</h2>
 			<ul>
 				<li><a href="#">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Projects</a></li>
-				<li><a href="#">Contact Us</a></li>
+				<li><a href="about1">About</a></li>
+				<li><a href="Project1">Projects</a></li>
+				<li><a href="contact1">Contact Us</a></li>
 			</ul>
 		</nav>
 
 		<div class="content">
 			<h4>Hello, my name is</h4>
 			<h1>Justin<span> Motsi</span></h1>
-			<h3>I'am a trainee Web Developer.</h3>
+			<h3>I am a trainee Web Developer</h3>
 		</div>
 	</div>
 
 	<!----About section start---->
-	<section class="about">
+	<section class="about" id="about1">
         <div class="main">
 			<img src="justin.png">
 			<div class="about-text">
@@ -48,14 +48,16 @@
 	</section>
     
     <!-- Project -->
-  <section class="Projects_container">
-    <section class="Child_Projects_container">
+  <section class="Projects_container" id="project1">
+      <div class = "Title">
+        <h2> PROJECTS </h2>
+      </div>
       <article>
         <header class ="portfolio_title_header">
           <img src="jaytrust.png" />
           <h1>JaysTrust DAO</h1>
         </header>
-        <div class="">
+        <div>
           <p>I made a decentralized autonomous organization web app using third web creating smart contracts using javascript. also termnianl skills to connect, create and deploy the contracts and react.js.
             the web app allows people to connect their wallet → mint a membership NFT → receive a token airdrop → and vote on proposals. The user will need a membership NFT to join the DAO. If they don't have a membership NFT, they will be prompt to actually mint a membership NFT and join the DAO.</p>
           <h2>Skills used:</h2>
@@ -63,19 +65,22 @@
             <li class="html">HTML</li>
             <li class="css">CSS</li>
             <li class="js">JavaScript</li>
-            <li class="js">react</li>
+            <li class="react">REACT</li>
           </ul>
         </div>
       </article>
-    </section>
+    </div>
   </section>
+   
 <!-- END OF PROJECT SECTION -->
 
 
-          
+  
 	<!------Contact Me------>
-	<div class="contact-me">
-		<p>CONTACT ME</p>
+	<div class="contact-me" id="contact1">
+    <div class = "Title">
+      <h2> CONTACT ME</h2>
+    </div>      
 		<form id="contact" action="" method="post">
       <fieldset>
         <input placeholder="Your name" type="text" tabindex="1" required autofocus>
@@ -101,11 +106,14 @@
 		<p>JUSTIN MOTSI</p>
         <p>Below we can connect on linkedin, and see my github for my other projects</p>
 		<div class="social">
-			<a href="#"><i class="fa-brands fa-linkedin"></i></a>
-			<a href="#"><i class="fa-brands fa-github"></i></a>
+			<a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+			<a href="#"><ion-icon name="logo-github"></ion-icon></a>
 		</div>
 		<p class="end">Copyright By Justin Motsi 2022</p>
 	</footer>
+
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
